# Cpp

CMake_temel_komutlar/: CMakeLists.txt  main.cpp
Meson_temel_komutlar/: main.cpp  meson.build
