# proje ismi ve projede kullanılan programlama dili belirtilmeli ; 'c' veya 'cpp'
project('hello_meson', 'cpp')

# derleme sonucunda üretilecek binary dosyanın ismi ilk argüman olarak verilir, 
# derlenecek dosyalar ise diğer argümanlarda belirtilir, bu örnekte sadece main.cpp derlenecek
executable('output', 'main.cpp')

